--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">UIDemo</string>
+    <string name="ui_slide_label">滚动悬停</string>
+    <string name="ui_coordinator_layout_label">CoordinatorLayoutDemo</string>
+
+    <string name="text_blash">那是最美好的时代，那是最糟糕的时代；那是智慧的年头，那是愚昧的年头；那是信仰的时期，那是怀疑的时期；那是光明的季节，那是黑暗的季节；那是希望的春天，那是失望的冬天；我们全都在直奔天堂，我们全都在直奔相反的方向--简而言之，那时跟现在非常相象，某些最喧嚣的权威坚持要用形容词的最高级来形容它。说它好，是最高级的；说它不好，也是最高级的。</string>
+    <string name="coordinator_title">双城记</string>
 </resources>
